--- a/bundle.yaml
+++ b/bundle.yaml
@@ -21350,6 +21350,9 @@ spec:
     served: true
     storage: true
     subresources:
+      scale:
+        specReplicasPath: .spec.replicas
+        statusReplicasPath: .status.replicas
       status: {}
 ---
 ---
