--- a/bundle.yaml
+++ b/bundle.yaml
@@ -16737,6 +16737,14 @@ spec:
                 - warn
                 - error
                 type: string
+              maxBlockDuration:
+                description: Maximum duration compacted blocks may span. For use in
+                  testing. (Defaults to 10% of the retention period.)
+                type: string
+              minBlockDuration:
+                description: Minimum duration of a data block before being persisted.
+                  For use in testing.
+                type: string
               minReadySeconds:
                 description: Minimum number of seconds for which a newly created pod
                   should be ready without any of its container crashing for it to
