--- a/bundle.yaml
+++ b/bundle.yaml
@@ -21376,7 +21376,7 @@ spec:
                         condition's last transition.
                       type: string
                     observedGeneration:
-                      description: observedGeneration represents the .metadata.generation
+                      description: ObservedGeneration represents the .metadata.generation
                         that the condition was set based upon. For instance, if .metadata.generation
                         is currently 12, but the .status.conditions[x].observedGeneration
                         is 9, the condition is out of date with respect to the current
