apis/monitoring/v1: Add podManagementPolicy  property
We have downtime issues with a podManagementPolicy set as Parallel.
We want to be able to change this to orderedReady and
we understand the consequences.

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -8457,6 +8457,11 @@ spec:
                 description: If set to true all actions on the underlying managed
                   objects are not goint to be performed, except for delete actions.
                 type: boolean
+              podManagementPolicy:
+                description: 'StatefulSet PodManagementPolicy. Defaults to value of
+                  `Parallel`. WARNING: Read limitations of StatefulSets: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#limitations
+                  before setting this value'
+                type: string
               podMetadata:
                 description: PodMetadata configures Labels and Annotations which are
                   propagated to the alertmanager pods.
@@ -16852,6 +16857,11 @@ spec:
                 description: When a Prometheus deployment is paused, no actions except
                   for deletion will be performed on the underlying objects.
                 type: boolean
+              podManagementPolicy:
+                description: 'StatefulSet PodManagementPolicy. Defaults to value of
+                  `Parallel`. WARNING: Read limitations of StatefulSets: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#limitations
+                  before setting this value'
+                type: string
               podMetadata:
                 description: PodMetadata configures Labels and Annotations which are
                   propagated to the prometheus pods.
@@ -25957,6 +25967,11 @@ spec:
                 description: When a ThanosRuler deployment is paused, no actions except
                   for deletion will be performed on the underlying objects.
                 type: boolean
+              podManagementPolicy:
+                description: 'StatefulSet PodManagementPolicy. Defaults to value of
+                  `Parallel`. WARNING: Read limitations of StatefulSets: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#limitations
+                  before setting this value'
+                type: string
               podMetadata:
                 description: PodMetadata contains Labels and Annotations gets propagated
                   to the thanos ruler pods.
