--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
@@ -4181,6 +4181,11 @@ spec:
                 description: When a Prometheus deployment is paused, no actions except
                   for deletion will be performed on the underlying objects.
                 type: boolean
+              podManagementPolicy:
+                description: 'StatefulSet PodManagementPolicy. Defaults to value of
+                  `Parallel`. WARNING: Read limitations of StatefulSets: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#limitations
+                  before setting this value'
+                type: string
               podMetadata:
                 description: PodMetadata configures Labels and Annotations which are
                   propagated to the prometheus pods.
