Replace ADD with COPY
Its a best practice to use the COPY statement instead of ADD. See https://docs.docker.com/develop/develop-images/dockerfile_best-practices/#add-or-copy for more information

--- a/cmd/admission-webhook/Dockerfile
+++ b/cmd/admission-webhook/Dockerfile
@@ -2,7 +2,7 @@ ARG ARCH="amd64"
 ARG OS="linux"
 FROM quay.io/prometheus/busybox-${OS}-${ARCH}:latest
 
-ADD admission-webhook /bin/admission-webhook
+COPY admission-webhook /bin/admission-webhook
 
 USER nobody
 
