feat: enable support for "dnsPolicy" in AlertManager CRD
Needed in scenarios like:
1. When using "hostNetwork"
2. for a Pod to ignore DNS settings from the Kubernetes environment

Signed-off-by: Pratik Raj <rajpratik71@gmail.com>

--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
@@ -2659,6 +2659,13 @@ spec:
                   - name
                   type: object
                 type: array
+              dnsPolicy:
+                description: 'Enable ability to add DNS policy. Kubernetes currently
+                  supports following "Default", "ClusterFirst", "ClusterFirstWithHostNet"
+                  and "None". More details can be found at https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy
+                  Note: "Default" is not the default DNS policy. If dnsPolicy is not
+                  explicitly specified, then "ClusterFirst" is used.'
+                type: string
               externalUrl:
                 description: The external URL the Alertmanager instances will be available
                   under. This is necessary to generate correct URLs. This is necessary
