--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -341,7 +341,7 @@
                                 "description": "TLS configuration",
                                 "properties": {
                                   "ca": {
-                                    "description": "Struct containing the CA cert to use for the targets.",
+                                    "description": "Certificate authority used when verifying server certificates.",
                                     "properties": {
                                       "configMap": {
                                         "description": "ConfigMap containing data to use for the targets.",
@@ -391,7 +391,7 @@
                                     "type": "object"
                                   },
                                   "cert": {
-                                    "description": "Struct containing the client cert file for the targets.",
+                                    "description": "Client certificate to present when doing client-authentication.",
                                     "properties": {
                                       "configMap": {
                                         "description": "ConfigMap containing data to use for the targets.",
@@ -772,7 +772,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -822,7 +822,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -1249,7 +1249,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -1299,7 +1299,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -1717,7 +1717,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -1767,7 +1767,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -2275,7 +2275,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -2325,7 +2325,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -2694,7 +2694,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -2744,7 +2744,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -3179,7 +3179,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -3229,7 +3229,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -3613,7 +3613,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -3663,7 +3663,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -3998,7 +3998,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -4048,7 +4048,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -4430,7 +4430,7 @@
                                     "description": "TLS configuration for the client.",
                                     "properties": {
                                       "ca": {
-                                        "description": "Struct containing the CA cert to use for the targets.",
+                                        "description": "Certificate authority used when verifying server certificates.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
@@ -4480,7 +4480,7 @@
                                         "type": "object"
                                       },
                                       "cert": {
-                                        "description": "Struct containing the client cert file for the targets.",
+                                        "description": "Client certificate to present when doing client-authentication.",
                                         "properties": {
                                           "configMap": {
                                             "description": "ConfigMap containing data to use for the targets.",
