--- a/bundle.yaml
+++ b/bundle.yaml
@@ -5366,6 +5366,11 @@ spec:
                         type: array
                     type: object
                 type: object
+              alertmanagerConfigNamespaceMatcher:
+                default: true
+                description: If set to false namespace matchers will not be added
+                  to the routes.
+                type: boolean
               alertmanagerConfigNamespaceSelector:
                 description: Namespaces to be selected for AlertmanagerConfig discovery.
                   If nil, only check own namespace.
