--- a/bundle.yaml
+++ b/bundle.yaml
@@ -17254,8 +17254,9 @@ spec:
                       description: File to read bearer token for remote read.
                       type: string
                     filterExternalLabels:
-                      description: Optional FilterExternalLabels. This translates
-                        in filter_external_labels in prometheus.yaml configuration.
+                      description: Whether to use the external labels as selectors
+                        for the remote read endpoint. Requires Prometheus v2.34.0
+                        and above.
                       type: boolean
                     headers:
                       additionalProperties:
