Implements spec.attachMetadata.node for ServiceMonitor
Issue: https://github.com/prometheus-operator/prometheus-operator/issues/5116

Problem: spec.attachMetadata.node had been previously implemented for
PodMonitor. With PR https://github.com/prometheus/prometheus/pull/10759
being merge it's now possible to also have this field for
ServiceMonitor

Solution: add the field to the ServiceMonitor CR and pass it to
generateK8SSDConfig instead of nil

Signed-off-by: JoaoBraveCoding <jmarcal@redhat.com>

--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_podmonitors.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_podmonitors.yaml
@@ -41,8 +41,8 @@ spec:
               by Prometheus.
             properties:
               attachMetadata:
-                description: 'Attaches node metadata to discovered targets. Only valid
-                  for role: pod. Only valid in Prometheus versions 2.35.0 and newer.'
+                description: Attaches node metadata to discovered targets. Requires
+                  Prometheus v2.35.0 and above.
                 properties:
                   node:
                     description: When set to true, Prometheus must have permissions
